# 3D_Game_Engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
include/glad/: glad.h
src/: Game.cpp  Game.h  glad.c  main.cpp
